@@ -4,12 +4,13 @@
   state:
     release: alpha
     api: alpha
-  date: 2021-03-13
+  date: 2022-11-04
   license:
     identifier: BSD-2-Clause
     uri: http://www.horde.org/licenses/bsd
-  notes: |+
-    
+  notes: |
+    [rla] Enable PHP 8.x compat.
+    |+
 2.0.0alpha3:
   api: 2.0.0alpha1
   state:
